xfsprogs-1.3.3 (27 July 2001)
	- fixes for (hopefully) the last few nits in libtool usage

xfsprogs-1.3.2 (23 July 2001)
	- install static libs and libtool archives into /usr/lib
	- shared libraries are unchanged, however

xfsprogs-1.3.1 (15 Jul 2001)
	- updated xfs_types.h file from the kernel changes needed for
	  an xfsdump fix.
	- tidy up various aspects of the libtool rework
	- XVM stripe unit/width extraction
	- fix an endian bug in xfs_db "write" command
	- fix a build problem with liblvm.a installed
	- fix bug in xfs_growfs mount option parsing with external log
	- BLKSZSET ioctl now conditional via the Makefile (off by default)
	- rework some of the Debian packaging rules
	- fix sign of BLKGETSIZE ioctl argument in libxfs
	- updated xfs_fs.h with DMAPI setdm details for dump/restore

xfsprogs-1.3.0 (11 Jul 2001)
	- reworked Makefiles to use libtool
	- new libdisk to allow sharing of generic mount/disk code and
	- also abstracts individual driver support (LVM, MD, XVM..)
	- partition table detection so mkfs.xfs doesn't blindly overwrite
	- small xfs_repair bug fix from Steve

xfsprogs-1.2.8 (02 Jul 2001)
	- fixed a bug in libxfs /etc/mtab read-only mount detection
	- first try procfs, fall back to /etc/mtab, for read-only mounts
	- sync with recent mount code changes for reiserfs and ext3 probes
	- fix logprint build problem under gcc 3.0

xfsprogs-1.2.7 (22 May 2001)
	- new xfs_freeze(8) command - volume manager snapshot helper

xfsprogs-1.2.6 (15 May 2001)
	- merge support for -d agsize=/su=/sw= (AG, stripe unit/width size)
	- merge support for dynamic configuration of default log size
	- document these and fix a couple of man page typos too

xfsprogs-1.2.5 (07 May 2001)
	- fix missing Makefile include entries for LVM headers
	- configure script default man path now /usr/share/man
	- add experimental xfs_rtcp (realtime copy) command
	- powerpc build failure fixups - thanks to Robert Ramiega
	- cleanup arch-specific code, esp. the byteswab routines