@@ -32,6 +32,7 @@
 
 #include <stdio.h>
 #include <fcntl.h>
+#include <stdlib.h>
 #include <volume.h>
 #include <sys/stat.h>
 #include "md.h"
